--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,5 @@
-deploy.ant.properties.file=C:\\Documents and Settings\\Administrator\\.netbeans\\7.0\\gfv3-2147429788.properties
+deploy.ant.properties.file=C:\\Users\\Administrator\\.netbeans\\7.0\\gfv31182046974.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.home=D:/glassfish3/glassfish
-j2ee.server.instance=[D:\\glassfish3\\glassfish]deployer:gfv3ee6wc:localhost:4848
-user.properties.file=C:\\Documents and Settings\\Administrator\\.netbeans\\7.0\\build.properties
+j2ee.server.home=D:/Program Files/glassfish-3.1.1/glassfish
+j2ee.server.instance=[D:\\Program Files\\glassfish-3.1.1\\glassfish]deployer:gfv3ee6wc:localhost:4848
+user.properties.file=C:\\Users\\Administrator\\.netbeans\\7.0\\build.properties
